--- a/Styles/style.css
+++ b/Styles/style.css
@@ -74,9 +74,16 @@ input {
     border-radius: 5px;
     padding: 3%;
     width: 90%;
-    background-color: #fff;
     border: none;
     border: 1px solid #ced4da;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+
 }
 
 .container-input {
@@ -86,7 +93,8 @@ input {
 }
 
 .container-password {
-    padding: 4% 0;
+    padding-top: 6%;
+    padding-bottom: 6%;
 }
 
 #btn-env {
@@ -104,6 +112,12 @@ input {
     font-size: 1rem;
     border-radius: 0.25rem;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+#btn-env:hover {
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+    cursor: pointer;
 }
 
 button {
@@ -125,11 +139,12 @@ button>b {
 
 .line-part {
     margin: 0 5%;
+    margin-bottom: 3%;
 }
 
 .btn-newaccount {
     margin-top: 4%;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
     width: 45%;
     background-color: #42b72a;
     border-color: #42b72a;
@@ -144,7 +159,7 @@ button>b {
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     border-radius: 0.25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .text-btn {
@@ -155,7 +170,7 @@ button>b {
 
 .text-per {
     font-size: 14px;
-    margin-top: 4%;
+    margin-top: 6%;
     align-content: center;
 }
 
